# bbc-metadata-scaper

./: .gitignore  Makefile  README.md  pyproject.toml  run_site_exif.py
src/site_exif/: __init__.py  cli.py
tests/: test_cli.py
